@@ -18,8 +18,10 @@
   *  - Core:
   *   - Android Accessory Host property strings changed from a struct of pointer to an array to prevent unaligned access on greater than 8-bit architectures
   *   - Audio Device Class driver changed to also require the index of the Audio Control interface within the device, for SET/GET/CUR/MIN/MAX/RES property adjustments
+  *   - Removed variable axis support from the HID_DESCRIPTOR_JOYSTICK() macro due to OS incompatibilities, replaced with fixed 3-axis joystick report structure
   *  - Library Applications:
   *   - Raised the guard bits in the AVRISP-MKII clone project when in PDI and TPI to 32, to prevent communication errors on low quality connections to a target
+  *   - Added additional bootloader API data to expose the bootloader start address and class to the DFU and CDC class bootloaders
   *
   *  <b>Fixed:</b>
   *  - Core:
@@ -33,7 +35,6 @@
   *   - Fixed error in the AVRISP-MKII programmer when ISP mode is used at 64KHz (thanks to Ben R. Porter)
   *   - Fixed AVRISP-MKII programmer project failing to compile for the U4 chips when VTARGET_ADC_CHANNEL is defined to an invalid channel and NO_VTARGET_DETECT is
   *     defined (thanks to Steven Morehouse)
-  *   - Added additional bootloader API data to expose the bootloader start address and class to the DFU and CDC class bootloaders
   *
   *  \section Sec_ChangeLog120219 Version 120219
   *  <b>New:</b>
